--- a/DX12Project/packages.config
+++ b/DX12Project/packages.config
@@ -1,4 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="directxmesh_desktop_2019" version="2023.4.28.1" targetFramework="native" />
   <package id="WinPixEventRuntime" version="1.0.230302001" targetFramework="native" />
 </packages>
