A complex static mesh with a texture is processed for the material test

--- a/DX12Project/DX12Project.vcxproj.filters
+++ b/DX12Project/DX12Project.vcxproj.filters
@@ -168,6 +168,7 @@
     <ClCompile Include="Source\D3D12\DXMeshLoader.cpp" />
     <ClCompile Include="Source\Engine\Object\Components\CameraComponent.cpp" />
     <ClCompile Include="Source\Engine\Object\Camera.cpp" />
+    <ClCompile Include="Source\Engine\Object\Components\MaterialComponent.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Source\D3D12\D3DUtil.h">
@@ -298,6 +299,7 @@
     <ClInclude Include="Source\Engine\Renderer\Primitive.h" />
     <ClInclude Include="Source\Engine\Object\Components\CameraComponent.h" />
     <ClInclude Include="Source\Engine\Object\Camera.h" />
+    <ClInclude Include="Source\Engine\Object\Components\MaterialComponent.h" />
   </ItemGroup>
   <ItemGroup>
     <None Include="..\.editorconfig" />
