--- a/DX12Project/DX12Project.vcxproj
+++ b/DX12Project/DX12Project.vcxproj
@@ -45,6 +45,7 @@
     <ClCompile Include="Source\Engine\Object\Class.cpp" />
     <ClCompile Include="Source\Engine\Object\Components\CameraComponent.cpp" />
     <ClCompile Include="Source\Engine\Object\Components\Component.cpp" />
+    <ClCompile Include="Source\Engine\Object\Components\MaterialComponent.cpp" />
     <ClCompile Include="Source\Engine\Object\Components\PrimitiveComponent.cpp" />
     <ClCompile Include="Source\Engine\Object\Components\RenderComponent.cpp" />
     <ClCompile Include="Source\Engine\Object\Entity.cpp" />
@@ -101,6 +102,7 @@
     <ClInclude Include="Source\Engine\Object\Class.h" />
     <ClInclude Include="Source\Engine\Object\Components\CameraComponent.h" />
     <ClInclude Include="Source\Engine\Object\Components\Component.h" />
+    <ClInclude Include="Source\Engine\Object\Components\MaterialComponent.h" />
     <ClInclude Include="Source\Engine\Object\Components\PrimitiveComponent.h" />
     <ClInclude Include="Source\Engine\Object\Components\RenderComponent.h" />
     <ClInclude Include="Source\Engine\Object\Entity.h" />
