Optimize the PSO library working PSO library was working every time even though it doesn't need to be updated before this commit. Thread workflow modified to check if a thread has to be updated or not.

--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,7 @@ Textures
 Debug
 DX12Project/x64
 DX12Project/Release
+_drafts
 
 # files
 *.vcxproj.user
@@ -12,3 +13,4 @@ DX12Project/Release
 *.vspx
 *.psess
 *.vspx
+*.pdb
